@@ -51,6 +51,7 @@
     "minecraft:carrots",
     "minecraft:cave_vines",
     "minecraft:chain",
-    "minecraft:cauldron"
+    "minecraft:cauldron",
+    "minecraft:cornflower"
   ]
 }
